# CurvatureEstimation

matlab/: MLS_curvature_computing.m  MLS_demo.m  MLS_energy.m  MLS_projection.m  readme.txt
src/: CMakeLists.txt  CurvatureEstimation.cpp  CurvatureEstimation.h  CurvatureEstimation.inl  Geometry.inl  Kdtree.h  MeshInfo.h  MeshInfo.inl
